--- a/keys.env
+++ b/keys.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY = 'token here'
+OPENAI_API_KEY = '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'
 
 REPLICATE_API_TOKEN= 'r8_Q6ns5UEgoVjkmuXGVzJBuYRP58mR2Hp2TepT2'
 
