--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
-﻿aiohttp==3.8.4
+aioboto3==8.0.5           # via -r requirements.in
+aiobotocore==1.0.4        # via -r requirements.in, aioboto3
+aiohttp==3.6.2            # via aiobotocore
+aioitertools==0.7.0       # via aiobotocore
+async-timeout==3.0.1      # via aiohttp
+attrs==19.3.0             # via aiohttp
+boto3==1.12.32            # via aiobotocore
+botocore==1.15.32         # via aiobotocore, boto3, s3transfer
+chardet==3.0.4            # via aiohttp
+docutils==0.15.2          # via botocore
+idna==2.10                # via yarl
+jmespath==0.10.0          # via boto3, botocore
+multidict==4.7.6          # via aiohttp, yarl
+python-dateutil==2.8.1    # via botocore
+s3transfer==0.3.3         # via boto3
+six==1.15.0               # via python-dateutil
+typing-extensions==3.7.4.2  # via aioitertools
+urllib3==1.25.10          # via botocore
+wrapt==1.12.1             # via aiobotocore
+yarl==1.5.1               # via aiohttp
 aiosignal==1.3.1
 altair==5.0.1
 async-timeout==4.0.2
 attrs==23.1.0
 blinker==1.6.2
-boto3
-botocore
 cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
