--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-aioboto3==8.0.5           # via -r requirements.in
-aiobotocore==1.0.4        # via -r requirements.in, aioboto3
-aiohttp==3.6.2            # via aiobotocore
-aioitertools==0.7.0       # via aiobotocore
-async-timeout==3.0.1      # via aiohttp
-attrs==19.3.0             # via aiohttp
-boto3==1.12.32            # via aiobotocore
-botocore==1.15.32         # via aiobotocore, boto3, s3transfer
-chardet==3.0.4            # via aiohttp
-docutils==0.15.2          # via botocore
-idna==2.10                # via yarl
-jmespath==0.10.0          # via boto3, botocore
-multidict==4.7.6          # via aiohttp, yarl
-python-dateutil==2.8.1    # via botocore
-s3transfer==0.3.3         # via boto3
-six==1.15.0               # via python-dateutil
-typing-extensions==3.7.4.2  # via aioitertools
-urllib3==1.25.10          # via botocore
-wrapt==1.12.1             # via aiobotocore
-yarl==1.5.1               # via aiohttp
+aioboto3==8.0.5           
+aiobotocore==1.0.4        
+aiohttp==3.6.2          
+aioitertools==0.7.0  
+async-timeout==3.0.1    
+attrs==19.3.0       
+boto3==1.12.32         
+botocore==1.15.32        
+chardet==3.0.4      
+docutils==0.15.2         
+idna==2.10              
+jmespath==0.10.0        
+multidict==4.7.6         
+python-dateutil==2.8.1   
+s3transfer==0.3.3     
+six==1.15.0        
+typing-extensions==3.7.4.2  
+urllib3==1.25.10         
+wrapt==1.12.1            
+yarl==1.5.1          
 aiosignal==1.3.1
 altair==5.0.1
 async-timeout==4.0.2
