--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aioboto3==8.0.5
 aiobotocore==1.0.4        
 aiohttp==3.6.2          
 aioitertools==0.7.0  
-async-timeout==3.0.1    
+async-timeout  
 attrs==19.3.0       
 boto3==1.12.32         
 botocore==1.15.32        
@@ -20,7 +20,7 @@ wrapt==1.12.1
 yarl==1.5.1          
 aiosignal==1.3.1
 altair==5.0.1
-async-timeout==4.0.2
+async-timeout
 attrs==23.1.0
 blinker==1.6.2
 cachetools==5.3.1
