--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aiobotocore==1.0.4
 aiohttp==3.6.2          
 aioitertools==0.7.0  
 async-timeout  
-attrs==19.3.0       
+attrs   
 boto3==1.12.32         
 botocore==1.15.32        
 chardet==3.0.4      
@@ -21,7 +21,6 @@ yarl==1.5.1
 aiosignal==1.3.1
 altair==5.0.1
 async-timeout
-attrs==23.1.0
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.5.7
