--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,7 @@ boto3==1.12.32
 botocore==1.15.32        
 chardet==3.0.4      
 docutils==0.15.2         
-idna==2.10              
-jmespath==0.10.0        
+idna      
 multidict==4.7.6         
 python-dateutil==2.8.1   
 s3transfer==0.3.3     
@@ -37,10 +36,9 @@ gitdb==4.0.10
 GitPython==3.1.31
 greenlet==2.0.2
 humbug==0.3.1
-idna==3.4
 importlib-metadata==6.6.0
 Jinja2==3.1.2
-jmespath==1.0.1
+jmespath
 jsonschema==4.17.3
 langchain==0.0.201
 langchainplus-sdk==0.0.10
