--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,11 @@ botocore==1.15.32
 chardet==3.0.4      
 docutils==0.15.2         
 idna      
-multidict==4.7.6         
 python-dateutil==2.8.1   
 s3transfer==0.3.3     
-six==1.15.0        
-typing-extensions==3.7.4.2  
-urllib3==1.25.10         
+typing-extensions
+urllib3       
 wrapt==1.12.1            
-yarl==1.5.1          
 aiosignal==1.3.1
 altair==5.0.1
 async-timeout
@@ -47,7 +44,7 @@ MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 mdurl==0.1.2
-multidict==6.0.4
+multidict
 multiprocess==0.70.14
 mypy-extensions==1.0.0
 numcodecs==0.11.0
@@ -81,7 +78,7 @@ reportlab==4.0.4
 requests==2.31.0
 rich==13.4.1
 s3transfer
-six==1.16.0
+six
 smmap==5.0.0
 SQLAlchemy==2.0.15
 streamlit==1.23.1
@@ -91,11 +88,9 @@ toolz==0.12.0
 tornado==6.3.2
 tqdm==4.65.0
 typing-inspect==0.9.0
-typing_extensions==4.6.3
 tzdata==2023.3
 tzlocal==4.3
-urllib3==1.26.16
 validators==0.20.0
 watchdog==3.0.0
-yarl==1.9.2
+yarl
 zipp==3.15.0
