--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ botocore==1.15.32
 chardet==3.0.4      
 docutils==0.15.2         
 idna      
-python-dateutil==2.8.1   
+python-dateutil
 s3transfer==0.3.3     
 typing-extensions
 urllib3       
@@ -68,7 +68,6 @@ PyJWT==2.7.0
 Pympler==1.0.1
 PyPDF2==3.0.1
 pyrsistent==0.19.3
-python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
