--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aioboto3       
 aiobotocore==1.0.4        
-aiohttp==3.6.2          
+aiohttp       
 aioitertools==0.7.0  
 async-timeout  
 attrs   
@@ -37,7 +37,7 @@ importlib-metadata==6.6.0
 Jinja2==3.1.2
 jmespath
 jsonschema==4.17.3
-langchain==0.0.201
+langchain
 langchainplus-sdk==0.0.10
 markdown-it-py==2.2.0
 MarkupSafe==2.1.3
