--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ aioitertools==0.7.0
 async-timeout  
 attrs   
 boto3==1.12.32         
-botocore==1.15.32        
+botocore
 chardet==3.0.4      
 docutils==0.15.2         
 idna      
